fix: buttons z-index

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,7 @@ li {
   padding: 5px;
   text-transform: uppercase;
   transition: 0.1s ease;
-  z-index: 1;
+  z-index: 2;
 
   &:hover {
     color: $active-font-color;
